Início do blog - Adição do conteúdo da aula 01

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,11 @@
-# Introduction
+# Mentoria DSM - Fatec OZ
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Bem vindo ao Blog das aulas de monitorias, aqui você encontrará todos os conteúdos passados nas aulas de forma
+mais bonitinha e organizada 😁
 
-## What is Nextra?
+Fique a vontade para navegar pelas páginas!
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Discord
 
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+Também temos um discord, onde você pode ver os conteúdos como dicas, recomendações, sessão de ajudas e muito mais,
+da uma passadinha lá, certeza que você irá curtir: [Discord DSM - Fatec OZ](https://discord.gg/thtgt56wJc) 😉
