Atualização do blog

--- a/pages/aulas/logica-algoritmos/aula-01.mdx
+++ b/pages/aulas/logica-algoritmos/aula-01.mdx
@@ -1,4 +1,11 @@
+import { Callout } from 'nextra/components'
+
 # Aula 01
+
+ 
+<Callout type="warning" emoji="⚠️">
+  O conteúdo dessa página ainda não foi definido e está sujeito a mudanças futuras.
+</Callout>
 
 ## Tópicos abordados
 
