--- a/pages/aulas/logica-algoritmos/aula-01/atividades.mdx
+++ b/pages/aulas/logica-algoritmos/aula-01/atividades.mdx
@@ -4,6 +4,8 @@
 
 ## Ex 01 - Venda de Carros:
 
+### Enunciado
+
 Faça um programa que pega recebe o nome, marca e o ano de um carro, e mostre as informações no terminal seguindo o modelo de saída:
 
 
